[package]
name = "lostik"
version = "0.1.0"
authors = ["crockpotveggies <justinlong@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
log = "0.4"
simplelog = {version = "^0.7.4", default-features = false}
hex = "0.4.0"
crossbeam-channel = "0.3.9"
format_escape_default = "0.1.1"
structopt = "0.3"
