[package]
name = "loramesh"
version = "0.1.0"
authors = ["crockpotveggies <justinlong@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.3.9"
format_escape_default = "0.1.1"
hex = "0.4.0"
log = "0.4"
nonzero_ext = "0.2.0"
ratelimit_meter = "5.0.0"
serialport = "3.3.0"
simplelog = {version = "^0.7.4", default-features = false}
structopt = "0.3"
tun-tap = "0.1.2"